# MPIwrapper

./: .#mpi-functions.inc  .zenodo.json  CITATION.cff  CMakeLists.txt  README.md  check_twolevel.sh  fortran-cpp.sh  generate_mpiabi_declarations.py  generate_mpiwrapper_definitions.py  generate_mpiwrapper_definitions_fortran.py  mpi-functions.inc  mpi_constants_fortran.py  mpi_functions.py  mpiabi.h  mpiexec1.in  mpiwrapper-mpiexec.in  mpiwrapper-version.h.in  mpiwrapper.cxx  mpiwrapper.f  mpiwrapper.f.in  mpiwrapper.h  mpiwrapper.hxx  mpiwrapperConfig.cmake.in
.github/workflows/: CI-mpich.yml  CI-openmpi.yml  CI.yml
cmake/: CheckMPIFeatures.cmake
src/: mpiwrapper.cxx  mpiwrapper.f  mpiwrapper.hxx  mpiwrapper_version.h.in
